--- a/source/Makefile
+++ b/source/Makefile
@@ -18,9 +18,12 @@
 F90FLAGS = -c -O2
 F77FLAGS = -c -O2 -fd-lines-as-comments -ffixed-line-length-132
 CFLAGS = -c -O2
-FF90 = /usr/local/bin/gfortran
-FF77 = /usr/local/bin/gfortran
-CC = /usr/local/bin/gcc
+#FF90 = /usr/local/bin/gfortran
+#FF77 = /usr/local/bin/gfortran
+#CC = /usr/local/bin/gcc
+FF90 = gfortran
+FF77 = gfortran
+CC = gcc
 
 # Intel compilers (e.g., icc, ifort))
 #F90FLAGS = -c -O2
