--- a/source/Makefile
+++ b/source/Makefile
@@ -14,16 +14,22 @@
 #
 # ln -s na.f.ORIG-serial na.f
 
-# GNU compilers (e.g., gcc, gfortran)
-F90FLAGS = -c -O2 -fprofile-arcs -ftest-coverage
-F77FLAGS = -c -O2 -fd-lines-as-comments -ffixed-line-length-132 -fprofile-arcs -ftest-coverage
-CFLAGS = -c -O2 -coverage
-#FF90 = /usr/local/bin/gfortran
-#FF77 = /usr/local/bin/gfortran
-#CC = /usr/local/bin/gcc
+# Default compiler options (slow, choose a better set below)
+F90FLAGS = -c -O0 -fprofile-arcs -ftest-coverage
+F77FLAGS = -c -O0 -fd-lines-as-comments -ffixed-line-length-132 -fprofile-arcs -ftest-coverage
+CFLAGS = -c -O2 -fprofile-arcs -ftest-coverage
+#LFLAGS: -lgcov --coverage
 FF90 = gfortran
 FF77 = gfortran
 CC = gcc
+
+# GNU compilers (e.g., gcc, gfortran)
+#F90FLAGS = -c -O2
+#F77FLAGS = -c -O2 -fd-lines-as-comments -ffixed-line-length-132
+#CFLAGS = -c -O2
+#FF90 = /usr/local/bin/gfortran
+#FF77 = /usr/local/bin/gfortran
+#CC = /usr/local/bin/gcc
 
 # Intel compilers (e.g., icc, ifort))
 #F90FLAGS = -c -O2
