Disabling codecov for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ script:
   - cd source
   - make all
   - cd ..
-  - bin/Test
-  - bin/Pecube
-  - bin/Vtk
+#  - bin/Test
+#  - bin/Pecube
+#  - bin/Vtk
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+#after_success:
+#  - bash <(curl -s https://codecov.io/bash)
